fixing the spread of box-shadwo fo wraper

--- a/projects/huddle-landing-page/style/style.css
+++ b/projects/huddle-landing-page/style/style.css
@@ -1,7 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap');
 :root {
-  --ff-heading: "Poppins", sans-serif;
-  --ff-body: "Open Sans", sans-serif;
+  --ff-heading: 'Poppins', sans-serif;
+  --ff-body: 'Open Sans', sans-serif;
   --fw-bold: 600;
   --fw-regular: 400;
   --clr-primary-violet: hsl(257 40% 49%);
@@ -95,8 +95,8 @@ select {
   z-index: 1;
 }
 .root::before {
-  content: "";
-  background-image: url("../images/bg-desktop.svg");
+  content: '';
+  background-image: url('../images/bg-desktop.svg');
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
@@ -108,7 +108,7 @@ select {
 }
 @media (max-width: 40em) {
   .root::before {
-    background-image: url("../images/bg-mobile.svg");
+    background-image: url('../images/bg-mobile.svg');
     background-size: 100%;
   }
 }
