--- a/projects/single-price-grid-component/scss/_layout.scss
+++ b/projects/single-price-grid-component/scss/_layout.scss
@@ -18,8 +18,6 @@ main {
   max-width: 70rem;
   margin-inline: auto;
   background-color: hsl(0, 0%, 100%);
-  border-radius: 0.4rem;
-  box-shadow: 0 0 10px 2px rgb(0 0 0 / 0.3);
 
   display: grid;
   grid-template-columns: minmax(0, 1fr);
@@ -28,7 +26,9 @@ main {
     'a'
     'b'
     'c';
-
+  border-radius: 1rem;
+  overflow: hidden;
+  box-shadow: 0 0 15px 0 rgb(0 0 0 / 0.2);
   @media screen and (min-width: 40em) {
     grid-template-columns: repeat(2, minmax(0, 1fr));
     grid-template-areas:
