--- a/projects/single-price-grid-component/style/style.css
+++ b/projects/single-price-grid-component/style/style.css
@@ -60,12 +60,13 @@ main {
   max-width: 70rem;
   margin-inline: auto;
   background-color: hsl(0deg, 0%, 100%);
-  border-radius: 0.4rem;
-  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.3);
   display: grid;
   grid-template-columns: minmax(0, 1fr);
   grid-template-rows: auto;
   grid-template-areas: "a" "b" "c";
+  border-radius: 1rem;
+  overflow: hidden;
+  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2);
 }
 @media screen and (min-width: 40em) {
   .wraper {
